<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.styledmap.MapsActivityRaw"
    android:background="@drawable/gradient"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logoHeight"
        android:src="@drawable/udacitylogowhitestacked"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/logoTopPadding"
        android:paddingBottom="@dimen/paddingBottom"
        android:contentDescription="@string/udacitylogo"
        />

    <Button
        android:id="@+id/learnbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactButton"
        android:fontFamily="@string/fontFamily"
        android:textSize="@dimen/buttonTextSize"
        android:textColor="@color/buttonText"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/buttonwhite"
        />


    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:fontFamily="@string/fontFamily"
        android:textSize="@dimen/textSize"
        android:textColor="@color/textColor"
        android:layout_below="@id/learnbutton"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/paddingTop"
        android:autoLink="phone"
        />


    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="@color/textColor"
        android:textColorLink="@color/linkColor"
        android:layout_below="@id/phoneNumber"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/websitepaddingTop"
        android:autoLink="web"
        />

    <TextView
        android:id="@+id/snailmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:layout_below="@id/website"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding"
        />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mapHeight"
        map:cameraZoom="10"
        android:layout_alignParentBottom="true"
        android:autoLink="web"
        />

</RelativeLayout>